.metadata/.plugins/org.eclipse.cdt.ui/Lab2_Context_Project.build.log
09:32:00 **** Incremental Build of configuration Debug for project Lab2_Context_Project ****
make -j7 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F411xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:43:1: error: unknown type name 'UART_HandleTypeDef'; did you mean 'DMA_HandleTypeDef'?
   43 | UART_HandleTypeDef huart2;
      | ^~~~~~~~~~~~~~~~~~
      | DMA_HandleTypeDef
../Core/Src/main.c: In function '__io_putchar':
../Core/Src/main.c:56:3: warning: implicit declaration of function 'HAL_UART_Transmit' [-Wimplicit-function-declaration]
   56 |   HAL_UART_Transmit(&huart2,(uint8_t*)&ch,1,HAL_MAX_DELAY);
      |   ^~~~~~~~~~~~~~~~~
../Core/Src/main.c: In function 'MX_USART2_UART_Init':
../Core/Src/main.c:197:9: error: request for member 'Instance' in something not a structure or union
  197 |   huart2.Instance = USART2;
      |         ^
../Core/Src/main.c:198:9: error: request for member 'Init' in something not a structure or union
  198 |   huart2.Init.BaudRate = 115200;
      |         ^
../Core/Src/main.c:199:9: error: request for member 'Init' in something not a structure or union
  199 |   huart2.Init.WordLength = UART_WORDLENGTH_8B;
      |         ^
../Core/Src/main.c:199:28: error: 'UART_WORDLENGTH_8B' undeclared (first use in this function)
  199 |   huart2.Init.WordLength = UART_WORDLENGTH_8B;
      |                            ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:199:28: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:200:9: error: request for member 'Init' in something not a structure or union
  200 |   huart2.Init.StopBits = UART_STOPBITS_1;
      |         ^
../Core/Src/main.c:200:26: error: 'UART_STOPBITS_1' undeclared (first use in this function)
  200 |   huart2.Init.StopBits = UART_STOPBITS_1;
      |                          ^~~~~~~~~~~~~~~
../Core/Src/main.c:201:9: error: request for member 'Init' in something not a structure or union
  201 |   huart2.Init.Parity = UART_PARITY_NONE;
      |         ^
../Core/Src/main.c:201:24: error: 'UART_PARITY_NONE' undeclared (first use in this function)
  201 |   huart2.Init.Parity = UART_PARITY_NONE;
      |                        ^~~~~~~~~~~~~~~~
../Core/Src/main.c:202:9: error: request for member 'Init' in something not a structure or union
  202 |   huart2.Init.Mode = UART_MODE_TX_RX;
      |         ^
../Core/Src/main.c:202:22: error: 'UART_MODE_TX_RX' undeclared (first use in this function)
  202 |   huart2.Init.Mode = UART_MODE_TX_RX;
      |                      ^~~~~~~~~~~~~~~
../Core/Src/main.c:203:9: error: request for member 'Init' in something not a structure or union
  203 |   huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |         ^
../Core/Src/main.c:203:27: error: 'UART_HWCONTROL_NONE' undeclared (first use in this function)
  203 |   huart2.Init.HwFlowCtl = UART_HWCONTROL_NONE;
      |                           ^~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:204:9: error: request for member 'Init' in something not a structure or union
  204 |   huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |         ^
../Core/Src/main.c:204:30: error: 'UART_OVERSAMPLING_16' undeclared (first use in this function)
  204 |   huart2.Init.OverSampling = UART_OVERSAMPLING_16;
      |                              ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:205:7: warning: implicit declaration of function 'HAL_UART_Init'; did you mean 'HAL_DMA_Init'? [-Wimplicit-function-declaration]
  205 |   if (HAL_UART_Init(&huart2) != HAL_OK)
      |       ^~~~~~~~~~~~~
      |       HAL_DMA_Init
../Core/Src/main.c: In function 'MX_GPIO_Init':
../Core/Src/main.c:231:21: error: 'LD2_GPIO_Port' undeclared (first use in this function)
  231 |   HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
      |                     ^~~~~~~~~~~~~
../Core/Src/main.c:231:36: error: 'LD2_Pin' undeclared (first use in this function)
  231 |   HAL_GPIO_WritePin(LD2_GPIO_Port, LD2_Pin, GPIO_PIN_RESET);
      |                                    ^~~~~~~
../Core/Src/main.c:234:25: error: 'B1_Pin' undeclared (first use in this function)
  234 |   GPIO_InitStruct.Pin = B1_Pin;
      |                         ^~~~~~
../Core/Src/main.c:237:17: error: 'B1_GPIO_Port' undeclared (first use in this function)
  237 |   HAL_GPIO_Init(B1_GPIO_Port, &GPIO_InitStruct);
      |                 ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

09:32:00 Build Failed. 20 errors, 2 warnings. (took 357ms)

